finish notebooks for text similarity

--- a/examples/notebooks/ex3_nb1_similarity_text.ipynb
+++ b/examples/notebooks/ex3_nb1_similarity_text.ipynb
@@ -635,8 +635,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "0cb4537c-10e9-4d87-bcb2-ad6cca0c0eca",
+   "execution_count": 82,
+   "id": "84bc87e6-08f8-490c-bc1e-716012229747",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,16 +644,8 @@
     "                             columns=['title_id_1', 'title_id_2', 'similarity_score']\n",
     "                            )\n",
     "df_similarity['title_id_1'] = df_similarity['title_id_1'].astype('int')\n",
-    "df_similarity['title_id_2'] = df_similarity['title_id_2'].astype('int')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "id": "63dae4a9-53c3-4cc2-810e-7526ee8e4466",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df_similarity['title_id_2'] = df_similarity['title_id_2'].astype('int')\n",
+    "\n",
     "df_similarity = df_similarity.merge(df_titles.reset_index()[['index', 'ITE_ITEM_TITLE']],\n",
     "                                    how='left',\n",
     "                                    left_on='title_id_1', right_on='index')\\\n",
@@ -1091,14 +1083,6 @@
    "source": [
     "**It shows interesting results, however it still misses a lot of the context, this could be improved by increasing the number of words in the vocabulary (here 110 were used) to keep the computation cost low**"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "af2da6a1-3b97-4968-a3d3-c14d2dbf7c0f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
