add markdown comments for huggingface example

--- a/examples/notebooks/ex3_nb2_similarity_text.ipynb
+++ b/examples/notebooks/ex3_nb2_similarity_text.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "c8491abd-6caa-4176-b70d-ed07f808c1b7",
+   "metadata": {},
+   "source": [
+    "# Similarity in product names\n",
+    "\n",
+    "Given a list of products names, find a way to compare how similar are them. \n",
+    "\n",
+    "In this notebook, an open source language model will be imported to generate embeddings for each sentence, and then computing the cosine similarity between each pair of binary feature vectors. The model chosen is [LaBSE](https://huggingface.co/setu4993/LaBSE), originally trained on 109 languages (including the required portuguese), with 768 embedding dimmensions."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "901d0a9b-064c-4605-98ab-1b80123ccbe3",
@@ -352,6 +364,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d6ad62e8-1407-485e-887e-09c0ded46e6f",
+   "metadata": {},
+   "source": [
+    "## 1. Download model and tokenizer"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "m96xMfrCKGzU",
@@ -365,6 +385,16 @@
     "tokenizer = BertTokenizerFast.from_pretrained(\"setu4993/LaBSE\")\n",
     "model = BertModel.from_pretrained(\"setu4993/LaBSE\")\n",
     "model = model.eval()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fff218da-90df-4d22-a3ad-6c05a6ee3027",
+   "metadata": {},
+   "source": [
+    "## 2. Apply model\n",
+    "\n",
+    "Run the tokenizer and the model over the list of sentences in batches for faster execution (control with batch_size parameter)."
    ]
   },
   {
@@ -463,6 +493,16 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00eddb21-e72b-4b6b-ae40-23cdc134cca4",
+   "metadata": {},
+   "source": [
+    "## 3. Compute similarity\n",
+    "\n",
+    "Compare each sentence against every other by applying the cosine similarity over the embedding vectors."
+   ]
   },
   {
    "cell_type": "code",
@@ -591,6 +631,14 @@
    "source": [
     "with open('pairwise_similarity_embedding.pkl', 'rb') as handle:\n",
     "    similarity_dict = pickle.load(handle)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab2ea5c4-36b3-4162-8cc6-ff2475d69a6b",
+   "metadata": {},
+   "source": [
+    "## 4. Format results"
    ]
   },
   {
